--- a/kafkart-backend/src/main/resources/application.properties
+++ b/kafkart-backend/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=kafkart-backend
 server.port=3001
+
+spring.datasource.url=jdbc:postgres://localhost:5433/kafkart
+spring.datasource.username=root
+spring.datasource.password=dummy-password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
