--- a/kafkart-frontend/package.json
+++ b/kafkart-frontend/package.json
@@ -1,28 +1,48 @@
 {
-  "name": "kafkart-frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^4.0.0",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-hover-card": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.5.2",
+		"lucide-react": "^0.475.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.54.2",
+		"react-router": "^7.1.5",
+		"solclientjs": "^10.17.1",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@types/node": "^22.13.1",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react": "^4.0.3",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"postcss": "^8.5.2",
+		"tailwindcss": "3",
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
+	}
 }
