--- a/kafkart-backend/src/main/resources/application.properties
+++ b/kafkart-backend/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=dummy-password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+solace.host=ws://localhost:8008
+solace.username=backend_user
+solace.password=password
+solace.vpnName=default
+solace.topic=product/events
+solace.requestTimeout=5000
